--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">School-SmartFacePro</string>
+	<string name="app_name_detail">School Smart Face Pro</string>
     <string name="title_home">Home</string>
     <string name="title_login">Login</string>
     <string name="title_calendar">Calendar</string>
